Eclipse Update Changes
Co-Authored-By: Prakhar Shekhar <73683289+PrakharMNNIT@users.noreply.github.com>
Co-Authored-By: piyush16119 <73683124+piyush16119@users.noreply.github.com>
Co-Authored-By: sanjeet kumar <60851268+sanjeetkumargithub@users.noreply.github.com>
Co-Authored-By: Tushar-Dhote789 <68141523+Tushar-Dhote789@users.noreply.github.com>

--- a/WebContent/.project
+++ b/WebContent/.project
@@ -1,41 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MeetZa</name>
+	<name>MyWebapp</name>
 	<comment></comment>
 	<projects>
 	</projects>
 	<buildSpec>
-		<buildCommand>
-			<name>org.eclipse.wst.jsdt.core.javascriptValidator</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>org.eclipse.wst.common.project.facet.core.builder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.wst.validation.validationbuilder</name>
+			<name>org.eclipse.m2e.core.maven2Builder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
-		<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
-		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
+		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1636705075683</id>
+			<id>1636705075716</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
